# SmartCityLose

./: CMakeLists.txt  README.md  ma_route.cpp  salutation
TrafficCore/: CMakeCache.txt  Cmakelists.txt  README.md  cmake_install.cmake
TrafficCore/assets/models/: abribus_bus_stop_bus_station.glb  model (1).glb
TrafficCore/config/: configuration.json
TrafficCore/demos/: boukhalf_simulation.cpp  test_roads.cpp
TrafficCore/include/: Intersection.h  MapLoader.h  Node.h  PathFinder.h  RoadNetwork.h  RoadSegment.h
TrafficCore/include/Vehicules/: Bus.h  Car.h  CarFactory.h  Emergencymanager.h  Emergencyvehicle.h  ModelManager.h  TrafficManager.h  Truck.h  Vehicule.h  VehiculeFactory.h
TrafficCore/include/geometry/: CurvedGeometry.h  RoadGeometryStrategy.h  RoundaboutGeometry.h  StraightGeometry.h
TrafficCore/src/: Intersection.cpp  MapLoader.cpp  Node.cpp  PathFinder.cpp  RoadNetwork.cpp  RoadSegment.cpp
TrafficCore/src/geometry/: CurvedGeometry.cpp  RoundaboutGeometry.cpp  StraightGeometry.cpp
TrafficCore/src/vehicles/: Bus.cpp  Car.cpp  CarFactory.cpp  EmergencyManager.cpp  EmergencyVehicle.cpp  ModelManager.cpp  TrafficManager.cpp  Truck.cpp  Vehicule.cpp  VehiculeFactory.cpp
TrafficCore/tests/: test_1_road_network.cpp  test_2_intersections.cpp  test_3_geometry_strategy.cpp  test_4_vehicle_factory.cpp  test_5_complete_simulation.cpp  test_roundabout.cpp  test_spawner_deterministic.cpp  test_vehicle_speeds.cpp
